# tutor-stack

./: .cursorrules  .gitignore  .gitmodules  AUTH_IMPLEMENTATION.md  CONTENT_FEATURES.md  Dockerfile.base  Dockerfile.dev  FRONTEND_IMPLEMENTATION.md  README.md  TEST_STRUCTURE_SUMMARY.md  auth_steps.md  build.sh  debug_curriculum.sh  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  pyproject.toml.backup  pytest.ini  run_tests.sh  setup.cfg  setup.sh  steps.md  test_setup.sh
.github/workflows/: ci.yml  deploy.yml  lint.yml
keys/: jwtRS256.key  jwtRS256.key.pub
keysold/: jwtRS256.key  jwtRS256.key.pub
tests/: README.md  __init__.py  conftest.py  utils.py
tests/e2e/: __init__.py  test_smoke.py
tests/fixtures/: __init__.py  debug_auth.py  test_db.py
tests/integration/: __init__.py  test_auth_integration.py  test_auth_local.py  test_auth_service.py  test_mounting.py  test_other_services.py
tests/unit/: __init__.py  test_auth_direct.py
traefik/: traefik-dynamic.yml
tutor_stack_core/: README.md  __init__.py  auth.py  pyproject.toml
